--- a/src/index.css
+++ b/src/index.css
@@ -1404,7 +1404,7 @@ textarea {
   .header-wallpaper {
     position: absolute;
     width: 100%;
-    max-height: 100%;
+    height: 150%;
     object-fit: cover;
     top: 0;
     z-index: -1;
@@ -2189,6 +2189,12 @@ textarea {
 }
 
 @media only screen and (width < 391px) {
+  
+  .header-wallpaper {
+
+    height: 120%;
+  
+  }
   .logo {
     padding: 0em 1em;
     width: 50%;
@@ -2338,6 +2344,13 @@ textarea {
 }
 
 @media only screen and (width < 370px) {
+
+  .header-wallpaper {
+
+    height: 110%;
+  
+  }
+
   .header-content > h4 {
     width: 70%;
   }
