--- a/src/index.css
+++ b/src/index.css
@@ -2191,8 +2191,8 @@ textarea {
 @media only screen and (width < 392px) {
   
   .header-wallpaper {
-
-    height: auto;
+position: absolute;
+    height: 120%;
   
   }
   .logo {
