--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,10 @@ nav a:hover {
   z-index: -1;
 }
 
+.header-wallpaper{
+  height: auto;
+}
+
 .wallpaper2 {
   height: 300px;
 }
@@ -1402,9 +1406,10 @@ textarea {
     z-index: 1;
   }
   .header-wallpaper {
+    display: none;
     position: absolute;
     width: 100%;
-    height: 150%;
+  height: 100%;
     object-fit: cover;
     top: 0;
     z-index: -1;
@@ -2103,9 +2108,7 @@ textarea {
 
 @media only screen and (width >390px) and (width <701px) {
 
-  .header-wallpaper{
-    max-height: 150%;
-  }
+
   .ring {
     width: 10%;
     left: 12%;
