--- a/src/index.css
+++ b/src/index.css
@@ -1407,7 +1407,7 @@ textarea {
   .header-wallpaper {
     position: absolute;
     width: 100%;
- height: 160%;
+ height: 800px;
     object-fit: cover;
     top: 0;
     z-index: -1;
